[gd_scene load_steps=30 format=2]

[ext_resource path="res://assets/background.png" type="Texture" id=1]
[ext_resource path="res://src/main.gd" type="Script" id=2]
[ext_resource path="res://scenes/Blob.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/trait3.png" type="Texture" id=4]
[ext_resource path="res://assets/trait2.png" type="Texture" id=5]
[ext_resource path="res://assets/trait1.png" type="Texture" id=6]
[ext_resource path="res://assets/hunger.png" type="Texture" id=7]
[ext_resource path="res://assets/hunger-bar.png" type="Texture" id=8]
[ext_resource path="res://assets/trait2-bar.png" type="Texture" id=9]
[ext_resource path="res://assets/trait3-bar.png" type="Texture" id=10]
[ext_resource path="res://assets/trait1-bar.png" type="Texture" id=11]
[ext_resource path="res://assets/shop-button.png" type="Texture" id=12]
[ext_resource path="res://assets/shop-button-clicked.png" type="Texture" id=13]
[ext_resource path="res://assets/shop-button-hover.png" type="Texture" id=14]
[ext_resource path="res://scenes/ShopItem.tscn" type="PackedScene" id=15]
[ext_resource path="res://assets/stats-button.png" type="Texture" id=16]
[ext_resource path="res://assets/pet-button.png" type="Texture" id=17]
[ext_resource path="res://assets/slime.png" type="Texture" id=18]
[ext_resource path="res://assets/work-button.png" type="Texture" id=19]
[ext_resource path="res://assets/mine.png" type="Texture" id=20]
[ext_resource path="res://assets/cat-icon.png" type="Texture" id=21]
[ext_resource path="res://assets/dog-icon.png" type="Texture" id=22]
[ext_resource path="res://assets/pig-icon.png" type="Texture" id=23]
[ext_resource path="res://assets/deer-icon.png" type="Texture" id=24]
[ext_resource path="res://assets/bird-icon.png" type="Texture" id=25]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.470588, 0.0784314, 0.556863, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 0.623529 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.470588, 0.0784314, 0.556863, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[node name="MainScene" type="Node2D"]
script = ExtResource( 2 )
poop = 100

[node name="Background" type="Sprite" parent="."]
position = Vector2( 400, 300 )
texture = ExtResource( 1 )

[node name="Blob" parent="." instance=ExtResource( 3 )]
position = Vector2( 80, 452 )

[node name="Health" type="Sprite" parent="."]
position = Vector2( 119, 25 )
texture = ExtResource( 6 )

[node name="Bar" type="Sprite" parent="Health"]
position = Vector2( -99, 9.53674e-07 )
scale = Vector2( 1.00001, 1.02941 )
texture = ExtResource( 11 )

[node name="HealthLabel" type="Label" parent="Health"]
margin_left = -99.0
margin_top = -7.0
margin_right = -41.0
margin_bottom = 7.0
text = "[ health ]"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Poop" type="Sprite" parent="."]
position = Vector2( 119, 118 )
texture = ExtResource( 5 )

[node name="Bar" type="Sprite" parent="Poop"]
position = Vector2( -99, 0 )
texture = ExtResource( 9 )

[node name="PoopLabel" type="Label" parent="Poop"]
margin_left = -99.0
margin_top = -7.0
margin_right = -51.0
margin_bottom = 7.0
text = "[ poop ]"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fun" type="Sprite" parent="."]
position = Vector2( 119, 87 )
texture = ExtResource( 4 )

[node name="Bar" type="Sprite" parent="Fun"]
position = Vector2( -99, 0 )
scale = Vector2( 0.5, 1 )
texture = ExtResource( 10 )

[node name="FunLabel" type="Label" parent="Fun"]
margin_left = -99.0
margin_top = -7.0
margin_right = -53.0
margin_bottom = 7.0
text = "[ fun ]"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hunger" type="Sprite" parent="."]
position = Vector2( 119, 56 )
texture = ExtResource( 7 )

[node name="Bar" type="Sprite" parent="Hunger"]
position = Vector2( -99, 0 )
scale = Vector2( -0.375001, 1 )
texture = ExtResource( 8 )

[node name="HungerLabel" type="Label" parent="Hunger"]
margin_left = -99.0
margin_top = -7.0
margin_right = -45.0
margin_bottom = 8.0
text = "[ hunger ]"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Money" type="Label" parent="."]
margin_left = 13.0
margin_top = 139.0
margin_right = 73.0
margin_bottom = 153.0
text = "[ money ]"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShopMenu" type="TextureButton" parent="."]
margin_left = 722.0
margin_top = 550.0
margin_right = 782.0
margin_bottom = 579.0
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 13 )
texture_hover = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StatsMenu" type="TextureButton" parent="."]
margin_left = 718.0
margin_top = 25.0
margin_right = 778.0
margin_bottom = 65.0
texture_normal = ExtResource( 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Work" type="TextureButton" parent="."]
margin_left = 651.0
margin_top = 549.0
margin_right = 711.0
margin_bottom = 589.0
texture_normal = ExtResource( 19 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pet" type="TextureButton" parent="."]
margin_left = 581.0
margin_top = 548.0
margin_right = 641.0
margin_bottom = 588.0
texture_normal = ExtResource( 17 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Shop" type="Popup" parent="."]
margin_left = 567.0
margin_top = 69.0
margin_right = 782.0
margin_bottom = 543.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Shop"]
margin_left = -1.0
margin_right = 215.0
margin_bottom = 474.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Shop/Panel"]
margin_left = 3.0
margin_top = 3.0
margin_right = 213.0
margin_bottom = 470.0
custom_constants/separation = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DogFood" parent="Shop/Panel/VBoxContainer" instance=ExtResource( 15 )]
label = "Dog food"
cost = 5
effect = "Give your bloob food and give him dog traits"
icon = ExtResource( 22 )

[node name="CatFood" parent="Shop/Panel/VBoxContainer" instance=ExtResource( 15 )]
margin_top = 65.0
margin_bottom = 125.0
label = "Cat food"
cost = 5
effect = "Give your bloob food and give him cat traits"
icon = ExtResource( 21 )

[node name="PigFood" parent="Shop/Panel/VBoxContainer" instance=ExtResource( 15 )]
margin_top = 130.0
margin_bottom = 190.0
label = "Pig food"
cost = 5
effect = "Give your bloob food and give him pig traits"
icon = ExtResource( 23 )

[node name="BirdFood" parent="Shop/Panel/VBoxContainer" instance=ExtResource( 15 )]
margin_top = 195.0
margin_bottom = 255.0
label = "Bird Food"
cost = 5
effect = "Give your bloob food and give him bird traits"
icon = ExtResource( 25 )

[node name="DeerFood" parent="Shop/Panel/VBoxContainer" instance=ExtResource( 15 )]
margin_top = 260.0
margin_bottom = 320.0
label = "Deer Food"
cost = 5
effect = "Give your bloob food and give him deer traits"
icon = ExtResource( 24 )

[node name="Stats" type="Popup" parent="."]
margin_left = 569.0
margin_top = 58.0
margin_right = 778.0
margin_bottom = 233.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StatsPanel" type="Panel" parent="Stats"]
margin_right = 209.0
margin_bottom = 194.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Stats/StatsPanel"]
margin_left = 6.0
margin_top = 6.0
margin_right = 209.0
margin_bottom = 188.0
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="Stats/StatsPanel/VBoxContainer"]
margin_right = 203.0
margin_bottom = 14.0
text = "[ name ]"

[node name="Spiecies" type="Label" parent="Stats/StatsPanel/VBoxContainer"]
margin_top = 24.0
margin_right = 203.0
margin_bottom = 38.0
text = "[ spiecies ]"

[node name="Age" type="Label" parent="Stats/StatsPanel/VBoxContainer"]
margin_top = 48.0
margin_right = 203.0
margin_bottom = 62.0
text = "[ age ]"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CatLevel" type="Label" parent="Stats/StatsPanel/VBoxContainer"]
margin_top = 72.0
margin_right = 203.0
margin_bottom = 86.0
text = "[ cat_level ]"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DogLevel" type="Label" parent="Stats/StatsPanel/VBoxContainer"]
margin_top = 96.0
margin_right = 203.0
margin_bottom = 110.0
text = "[ dog_level ]"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeerLevel" type="Label" parent="Stats/StatsPanel/VBoxContainer"]
margin_top = 120.0
margin_right = 203.0
margin_bottom = 134.0
text = "[ deer_level ]"

[node name="PigLevel" type="Label" parent="Stats/StatsPanel/VBoxContainer"]
margin_top = 144.0
margin_right = 203.0
margin_bottom = 158.0
text = "[ pig_level ]"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BirdLevel" type="Label" parent="Stats/StatsPanel/VBoxContainer"]
margin_top = 168.0
margin_right = 203.0
margin_bottom = 182.0
text = "[ bird_level ]"

[node name="Button" type="Button" parent="."]
margin_left = 365.0
margin_top = 6.0
margin_right = 445.0
margin_bottom = 26.0
text = "Save game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PetPopup" type="Popup" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PetOverlay" type="Panel" parent="PetPopup"]
margin_top = 1.0
margin_right = 800.0
margin_bottom = 600.0
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PetPanel" type="Panel" parent="PetPopup"]
margin_left = 206.0
margin_top = 137.0
margin_right = 586.0
margin_bottom = 472.0
custom_styles/panel = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PetButton" type="TextureButton" parent="PetPopup/PetPanel"]
margin_left = 88.0
margin_top = 69.0
margin_right = 280.0
margin_bottom = 276.0
rect_clip_content = true
texture_normal = ExtResource( 18 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ClosePet" type="Button" parent="PetPopup/PetPanel"]
margin_left = 321.0
margin_top = 308.0
margin_right = 368.0
margin_bottom = 328.0
text = "Close"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WorkPopup" type="Popup" parent="."]
margin_right = 800.0
margin_bottom = 600.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Overlay" type="Panel" parent="WorkPopup"]
margin_top = 1.0
margin_right = 800.0
margin_bottom = 600.0
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="WorkPopup"]
margin_left = 206.0
margin_top = 137.0
margin_right = 586.0
margin_bottom = 472.0
custom_styles/panel = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Mine" type="TextureButton" parent="WorkPopup/Panel"]
margin_left = 63.0
margin_top = 2.0
margin_right = 305.0
margin_bottom = 232.0
texture_normal = ExtResource( 20 )

[node name="Label" type="Label" parent="WorkPopup/Panel"]
margin_top = 240.0
margin_right = 380.0
margin_bottom = 273.0
text = "Click to make your slime work in mine.
Every click give you 5$ but fun of slime drops, hunger rises."

[node name="Close" type="Button" parent="WorkPopup"]
margin_left = 527.0
margin_top = 445.0
margin_right = 574.0
margin_bottom = 465.0
text = "Close"

[node name="MeatContainer" type="Panel" parent="."]
margin_left = 333.0
margin_top = 139.0
margin_right = 464.0
margin_bottom = 272.0
custom_styles/panel = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="ShopMenu" to="." method="open_menu"]
[connection signal="pressed" from="StatsMenu" to="." method="open_stats"]
[connection signal="pressed" from="Work" to="." method="go_to_work"]
[connection signal="pressed" from="Pet" to="." method="open_pet_popup"]
[connection signal="pressed" from="Shop/Panel/VBoxContainer/DogFood" to="." method="give_dog_food"]
[connection signal="pressed" from="Shop/Panel/VBoxContainer/CatFood" to="." method="give_cat_food"]
[connection signal="pressed" from="Shop/Panel/VBoxContainer/PigFood" to="." method="give_pig_food"]
[connection signal="pressed" from="Shop/Panel/VBoxContainer/BirdFood" to="." method="give_giraffe_food"]
[connection signal="pressed" from="Shop/Panel/VBoxContainer/DeerFood" to="." method="give_deer_food"]
[connection signal="pressed" from="Button" to="." method="save_game"]
[connection signal="pressed" from="PetPopup/PetPanel/PetButton" to="." method="pet_slime"]
[connection signal="pressed" from="PetPopup/PetPanel/ClosePet" to="." method="close_pet_popup"]
[connection signal="pressed" from="WorkPopup/Panel/Mine" to="." method="mine"]
[connection signal="pressed" from="WorkPopup/Close" to="." method="close_work_popup"]
